--- a/flaskTech/templates/landingpage.html
+++ b/flaskTech/templates/landingpage.html
@@ -83,7 +83,7 @@
         <div class="content">
             <h1>Welcome to TechNews</h1>
             <p>Stay ahead in cybersecurity with the latest news and updates.</p>
-            <a href="{{ url_for('home') }}" class="btn btn-primary">Get Latest News &rarr;</a>
+            <a href="{{ url_for('about') }}" class="btn btn-primary">Get Latest News &rarr;</a>
         </div>
     </div>
 
