--- a/flaskTech/templates/search_results.html
+++ b/flaskTech/templates/search_results.html
@@ -93,6 +93,7 @@
         <h1>Search Results for "{{ query }}"</h1>
         <div class="row">
             {% for article in search_results %}
+            <a href="{{ article['url'] }}">
             <div class="card my-4 mx-2" style="width: 18rem;">
                 <img src="{{ article['urlToImage'] }}" class="card-img-top" alt="{{ article['title'] }}">
                 <div class="card-body">
@@ -101,6 +102,7 @@
                     <a href="{{ article['url'] }}" class="btn btn-primary" target="_blank">Read More</a>
                 </div>
             </div>
+            </a>
             {% endfor %}
         </div>
 
